Fixed avatar shifting when search shown in mobile.

--- a/static/styles/inkwell.css
+++ b/static/styles/inkwell.css
@@ -2339,6 +2339,19 @@ input[type="search"]::-webkit-search-decoration {
 		height: 30px;
 	}
 
+	.sidebar-controls {
+		min-height: 32px;
+		align-items: center;
+	}
+
+	.sidebar-controls > .user-menu,
+	.sidebar-controls > .user-menu .avatar-button {
+		height: 30px;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+	}
+
 	.search-toggle {
 		width: 30px;
 		height: 30px;
@@ -2353,6 +2366,14 @@ input[type="search"]::-webkit-search-decoration {
 		max-width: 250px;
 		justify-self: center;
 		width: 100%;
+		height: 32px;
+	}
+
+	.sidebar-header .segments button {
+		min-height: 100%;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.all-highlights-search,
